<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flash_page_back"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".45">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/terrain_shop_icon"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                 />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".55"
            android:orientation="vertical">

            <TextView
                android:id="@+id/apps_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee"
                android:text="@string/app_name"
                android:textColor="@color/primary_variant_second"
                android:textSize="@dimen/_28sdp"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/quote"
                android:textColor="@color/primary_variant_second"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


<!--    <ImageView-->
<!--        android:id="@+id/image_icon"-->
<!--        android:layout_width="250dp"-->
<!--        android:layout_height="250dp"-->
<!--        android:src="@drawable/terrain_shop_icon"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:outlineSpotShadowColor="@color/black"-->
<!--        android:outlineAmbientShadowColor="@color/black"-->
<!--        android:elevation="12dp"-->
<!--        android:layout_marginTop="50dp"/>-->




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_second"
            android:text="Developed by:"
            android:fontFamily="@font/cantora_one"
            android:textStyle="italic"
            android:textSize="@dimen/_9sdp"/>
        <ImageView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_25sdp"
            android:textColor="@color/white"
            android:src="@drawable/ttit_new2"
            android:textSize="12sp"/>


    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_control"
        android:textColor="@color/primary_second"
        android:textSize="@dimen/_9sdp"
        android:textStyle="bold"
        android:fontFamily="@font/cantora_one"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentStart="true"/>


</RelativeLayout>